# Curator_Support_System

./: frontend_test.html  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: activities.py  api.py  curator_plans.py  curators.py  documents.py  dormitory.py  financial_support.py  groups.py  performance.py  rewards.py  student_history.py  students.py  study_programs.py
app/crud/: __init__.py  activities.py  base.py  curator_plans.py  curators.py  documents.py  dormitory.py  financial_support.py  groups.py  performance.py  rewards.py  student_history.py  students.py  study_programs.py
app/models/: __init__.py  activities.py  base.py  curator_plans.py  curators.py  documents.py  dormitory.py  financial_support.py  groups.py  performance.py  rewards.py  student_history.py  students.py  study_programs.py
app/schemas/: __init__.py  activities.py  base.py  curator_plans.py  curators.py  documents.py  dormitory.py  financial_support.py  groups.py  performance.py  rewards.py  student_history.py  students.py  study_programs.py
